--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "emulicious-debugger",
             "request": "attach",
             "name": "Launch in Emulicious",
-            "program": "${workspaceFolder}/bin/doavi.gb",
+            "program": "${workspaceFolder}/bin/gburst2.gb",
             "port": 58870,
             "stopOnEntry": true
         },
